# ParallelsClipboardFix

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
crates/ParallelsClipboardFix/: Cargo.toml
crates/ParallelsClipboardFix/src/: main.rs
crates/ParallelsClipboardFix/src/clipboard/: mod.rs  win32.rs
crates/ParallelsClipboardFix/src/config/: mod.rs
crates/ParallelsClipboardFix/src/logger/: mod.rs
crates/ParallelsClipboardFix/src/startup/: mod.rs  win32.rs
crates/ParallelsClipboardFix/src/tray/: mod.rs  win32.rs
crates/ParallelsClipboardFix/src/watcher/: mod.rs  win32.rs
